--- a/docs/rst/notes/previous_versions/v0.2.0.rst
+++ b/docs/rst/notes/previous_versions/v0.2.0.rst
@@ -39,7 +39,7 @@ This release includes the following **bugfixes**:
 * When receiving data from a new entity, it is added to its corresponding entity model as an additional model
   item instead of destroying and rebuilding the entire model.
 * Avoid destroy ChartBoxes when they are out of the view.
-* Increase Y axis in historic CharBoxes so all the data is visible.
+* Increase Y axis in historic ChartBoxes so all the data is visible.
 * Refactor Historic series so all the internal data is deleted when graphics are removed.
 * Increased the number of characters for series labels.
 * Change displayed chart units for some DataKinds.
