Fast DDS Monitor refactor: Fast DDS v3 compatibility (#227)
* Add minor changes for Monitor compilation using refactored fastdds_statistics_backend

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

* Refs #21446: Add review changes

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

* Refs #21446: Update docs dependencies

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

* Refs #21446: Fix test.yml to add python dependencies

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

* Refs #21446: Fix documentation tests

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

---------

Signed-off-by: Carlosespicur <carlosespicur@proton.me>

--- a/docs/rst/notes/previous_versions/v2.0.0.rst
+++ b/docs/rst/notes/previous_versions/v2.0.0.rst
@@ -14,6 +14,7 @@ This release includes the following **features**:
 
 This release includes the following **dependencies update**:
 
+.. _version_v2.0.0:
 .. list-table::
     :header-rows: 1
 
@@ -23,13 +24,13 @@ This release includes the following **dependencies update**:
         - New Version
     *   - Fast CDR
         - `eProsima/Fast-CDR <https://github.com/eProsima/Fast-CDR>`_
-        - `v1.1.0 <https://github.com/eProsima/Fast-CDR/releases/tag/v1.1.0>`_
-        - `v2.1.2 <https://github.com/eProsima/Fast-CDR/releases/tag/v2.1.2>`_
+        - `v1.1.0 <https://github.com/eProsima/Fast-CDR/releases/tag/v1.1.0>`__
+        - `v2.1.2 <https://github.com/eProsima/Fast-CDR/releases/tag/v2.1.2>`__
     *   - Fast DDS
         - `eProsima/Fast-DDS <https://github.com/eProsima/Fast-DDS>`_
-        - `v2.11.0 <https://github.com/eProsima/Fast-DDS/releases/tag/v2.11.0>`_
-        - `v2.13.0 <https://github.com/eProsima/Fast-DDS/releases/tag/v2.13.0>`_
+        - `v2.11.0 <https://github.com/eProsima/Fast-DDS/releases/tag/v2.11.0>`__
+        - `v2.13.0 <https://github.com/eProsima/Fast-DDS/releases/tag/v2.13.0>`__
     *   - Fast DDS Statistics Backend
         - `eProsima/Fast-DDS-statistics-backend <https://github.com/eProsima/Fast-DDS-statistics-backend>`_
-        - `v0.11.0 <https://github.com/eProsima/Fast-DDS-statistics-backend/releases/tag/v0.11.0>`_
-        - `v1.0.0 <https://github.com/eProsima/Fast-DDS-statistics-backend/releases/tag/v1.0.0>`_
+        - `v0.11.0 <https://github.com/eProsima/Fast-DDS-statistics-backend/releases/tag/v0.11.0>`__
+        - `v1.0.0 <https://github.com/eProsima/Fast-DDS-statistics-backend/releases/tag/v1.0.0>`__
